fixing download link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
   </div>
   <div class="grid-lg-1-2">
     <div class="well">
-      <p><a href="https://github.com/rtorr/intellij-settings/blob/master/downloads/settings.jar">Download and import the settings.jar</a> -  File > Import Settings</p>
+      <p><a href="https://cdn.rawgit.com/rtorr/intellij-settings/master/downloads/settings.jar">Download and import the settings.jar</a> -  File > Import Settings</p>
     </div>
   </div>
 </div> <!-- end row -->
